--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -72,11 +72,13 @@ body {
         padding-right: 15px;
         text-align: center;
         right: 0;
+        width: 50%;
+        background-color: black;
+        color: white;
     }
 
     #top-small nav ul {
-        background-color: black;
-        width: 110px;
+        width: 100%;
         font-size: 1.25rem;
         list-style: none;
         border-bottom: 2px solid white;
@@ -85,13 +87,21 @@ body {
         /* border-radius: 6px; */
         border-bottom-left-radius: 6px;
         border-bottom-right-radius: 6px;
-        padding: 5px 10px 15px 10px;
+        padding: 0 10px 15px 10px;
     }
         
     #top-small nav ul > li {
-        border-bottom: 1px solid white;
+        background-color: white;
+        color: black;
+        border-bottom: 1px solid black;
         padding-top: 5;
         cursor: pointer;
+    }
+
+    #top-small nav ul > li:last-child {
+        border-bottom-left-radius: 6px;
+        border-bottom-right-radius: 6px;
+        padding-bottom: 5px;
     }
 
     #top-small nav ul > li:hover {
@@ -110,7 +120,6 @@ body {
 
     #about-me {
         width: 100%;
-        height: calc(100vh - 85px);
         padding-top: 85px;
         position: relative;
         z-index: 1;
@@ -187,13 +196,12 @@ body {
 
     #about-me {
         width: 100%;
-        height: calc(100% - 133px);
         position: relative;
         background-color: black;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: calc(133px * 1.75) 0 20px 0;
+        padding: 143px 0 20px 0;
     }
 
     #about-me img {
@@ -308,13 +316,12 @@ body {
 
     #about-me {
         width: 100%;
-        height: calc(100% - 75px);
         position: relative;
         background-color: black;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: calc(75px * 2.5) 0 20px 0;
+        padding: 95px 0 20px 0;
     }
 
     #about-me img {
