--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -65,7 +65,15 @@ body {
         position: fixed;
         z-index: 5;
         background-color: black;
+        height: 75px;
     }
+
+    /*
+        top-small height: 
+            font-size: 2.5 * 16px = 40px +
+            small-padding: 20px +
+            border-bottom: 1px
+    */
 
     #top-small nav {
         position: absolute;
@@ -118,9 +126,12 @@ body {
         border-radius: 10px;
     }
 
+    .separator {
+        height: 75px;
+    }
+
     #about-me {
         width: 100%;
-        padding-top: 85px;
         position: relative;
         z-index: 1;
         background-color: black;
@@ -128,6 +139,12 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        min-height: calc(100vh - 75px);
+        padding: 20px 0;
+    }
+
+    #borrar {
+        height: 100vh;
     }
 
     #about-me img {
@@ -146,6 +163,10 @@ body {
         font-size: 1.15rem;
         margin-bottom: 20px;
         border-bottom: 1px solid white;
+    }
+
+    #desktop-img {
+        display: none;
     }
 }
 
@@ -194,6 +215,10 @@ body {
         display: none
     }
 
+    .separator{
+        height: 133px;
+    }
+
     #about-me {
         width: 100%;
         position: relative;
@@ -201,7 +226,8 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 143px 0 20px 0;
+        min-height: calc(100vh - 103px);
+        padding: 10px 0;
     }
 
     #about-me img {
@@ -223,6 +249,10 @@ body {
         margin-bottom: 20px;
         padding-bottom: 20px;
         border-bottom: 1px solid white;
+    }
+
+    #desktop-img {
+        display: none;
     }
 }
 
@@ -314,6 +344,10 @@ body {
         display: none
     }
 
+    .separator {
+        height: 76px;
+    }
+
     #about-me {
         width: 100%;
         position: relative;
@@ -321,7 +355,8 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 95px 0 20px 0;
+        min-height: calc(100vh - 116px);
+        padding: 20px 0;
     }
 
     #about-me img {
@@ -343,5 +378,10 @@ body {
         margin-bottom: 20px;
         padding-bottom: 20px;
         border-bottom: 1px solid white;
+    }
+
+    #desktop-img {
+        margin-right: 0;
+        margin-left: 20px;
     }
 } 
