--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,7 +19,7 @@ body {
 
 @media screen and (max-width: 665px) {
     h1 {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     
     .small {
@@ -80,14 +80,16 @@ body {
         padding-right: 15px;
         text-align: center;
         right: 0;
-        width: 50%;
+        width: 65%;
         background-color: black;
+        border-bottom-left-radius: 6px;
+        border-bottom-right-radius: 6px;
         color: white;
     }
 
     #top-small nav ul {
         width: 100%;
-        font-size: 1.25rem;
+        font-size: 5.75vw;
         list-style: none;
         border-bottom: 2px solid white;
         border-left: 2px solid white;
@@ -95,7 +97,7 @@ body {
         /* border-radius: 6px; */
         border-bottom-left-radius: 6px;
         border-bottom-right-radius: 6px;
-        padding: 0 10px 15px 10px;
+        padding: 10px 10px 15px 10px;
     }
         
     #top-small nav ul > li {
@@ -104,6 +106,11 @@ body {
         border-bottom: 1px solid black;
         padding-top: 5;
         cursor: pointer;
+    }
+
+    #top-small nav ul > li:nth-child(1) {
+        border-top-left-radius: 6px;
+        border-top-right-radius: 6px;   
     }
 
     #top-small nav ul > li:last-child {
@@ -130,7 +137,8 @@ body {
         height: 75px;
     }
 
-    #about-me {
+    #about-me
+    {
         width: 100%;
         position: relative;
         z-index: 1;
@@ -139,8 +147,8 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        min-height: calc(100vh - 75px);
-        padding: 20px 0;
+        min-height: calc(100vh - 125px);
+        padding: 25px 0;
     }
 
     #borrar {
@@ -157,10 +165,11 @@ body {
         width: 80%;
         margin-top: 20px;
         text-align: center;
+        font-size: 1.1rem;
     }
 
     #name {
-        font-size: 1.15rem;
+        font-size: 1.2rem;
         margin-bottom: 20px;
         border-bottom: 1px solid white;
     }
@@ -226,8 +235,8 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        min-height: calc(100vh - 103px);
-        padding: 10px 0;
+        min-height: calc(100vh - 183px);
+        padding: 25px 0;
     }
 
     #about-me img {
